# inventory

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  configuration.yaml  docker-compose.yml  readme.md
configuration/: base.yaml  local.yaml  production.yaml
inventory_server/src/: configuration.rs  startup.rs
inventory_server/src/routes/: health_check.rs
scripts/: init_db.sh  init_docker_db.sh  init_mongo.js  init_session_store.sh
src/: configuration.rs  lib.rs  main.rs  session.rs  startup.rs  utils.rs
src/authentication/: password.rs
src/middleware/: authorize.rs
src/routes/: health_check.rs  mod.rs  product.rs
src/routes/category/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/login/: get.rs  mod.rs  post.rs  put.rs
src/routes/product/: delete.rs  get.rs  mod.rs  post.rs
src/routes/search/: mod.rs  post.rs
src/routes/user/: get.rs  mod.rs  post.rs  put.rs
