[package]
name = "inventory_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argon2 = { version = "0.5.1", features = ["std"] }
axum = "0.6.18"
config = "0.13.3"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
mongodb = { version = "2.6.0", features = ["bson-serde_with"] }
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.4.1"
